--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "angular2-notifications": "^9.0.0",
+    "file-saver": "^2.0.2",
     "json-server": "^0.16.1",
+    "pdfmake": "^0.1.68",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
