Finished export-data Controller and Services; Created new Object for export-data input; Changed students status model to recieve string type

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pdfmake": "^0.1.68",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "xlsx": "^0.16.5",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
